--- a/index.html
+++ b/index.html
@@ -92,6 +92,8 @@
                                         </li>
                                         <li><a class="smoth-scroll" href="#contact">Contact</a>
                                         </li>
+                                        <li><a class="smoth-scroll" href=bday.html>Birthday</a>
+                                        </li>
                                     </ul>
                                 </div>
                             </div>
